--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-markdown": "^10.1.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
