--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     implementation project(':capacitor-cordova-android-plugins')
+
+    // MediaPipe GenAI for on-device LLM
+    implementation 'com.google.mediapipe:tasks-genai:0.10.14'
 }
 
 apply from: 'capacitor.build.gradle'
